--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -62,6 +62,7 @@ ru:
   pages:
     index:
       title: Добро пожаловать в AskIt!
+      contacts: 'Контакты:'
   questions:
     create:
       success: Вопрос создан!
